--- a/thymeleafdemo/src/main/resources/templates/employees/list-employees.html
+++ b/thymeleafdemo/src/main/resources/templates/employees/list-employees.html
@@ -48,6 +48,10 @@
 					   class="btn btn-info btn-sm">
 						Update
 					</a>
+					<a th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"
+					   class="btn btn-danger btn-sm">
+						Delete
+					</a>
 				</td>
 			</tr>
 		</tbody>		
